syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "TransactionReceiveServiceServerProto";

service TransactionReceiveServiceServer {
  rpc GetTransactionsWithPaginationByOption (RequestFilterTransactionRequest) returns (TransactionReceivePaginationResponseDTO);
  rpc GetTransactionsWithPaginationAllFilter (RequestAllFilterTransactionRequest) returns (TransactionReceivePaginationResponseDTO);
}

message RequestFilterTransactionRequest {
  TypeA typeA = 1;
  TypeB typeB = 2;
  TypeC typeC = 3;
  TypeD typeD = 4;
  int32 page = 5;
  int32 size = 6;
}

message RequestAllFilterTransactionRequest {
  int32 page = 1;
  int32 size = 2;
}

message TransactionReceivePaginationResponseDTO {
  bool hasNext = 1;
  repeated TransactionReceiveAdminListDTO items = 2;
  int32 limit = 3;
  int32 page = 4;
  int32 total = 5;
}

message TransactionReceiveAdminListDTO{
  string id = 1;
  int64 amount = 2;
  int64 timePaid = 3;
  string referenceNumber = 4;
  string orderId = 5;
  string terminalCode = 6;
  string subCode = 7;
  int64 timeCreated = 8;
  string bankAccount = 9;
  string bankShortName = 10;
  int32 status = 11;
  string content = 12;
  int32 transStatus = 13;
  int32 type = 14;
  int32 statusResponse = 15;
  string transType = 16;
  string note = 17;
}



message TypeA {
  optional string type = 1;
  optional int64 from = 2;
  optional int64 to = 3;
}

message TypeB {
  optional string type = 1;
  optional string merchantName = 2;
}

message TypeC {
  optional string type = 1;
  optional string bankAccount = 2;
  optional string referenceNumber = 3;
  optional string orderId = 4;
  optional string terminalCode = 5;
  optional string subCode = 6;
  optional string content = 7;
}

message TypeD {
  optional string type = 1;
  optional int32 status = 2;
}